--- a/#src/html/_main.html
+++ b/#src/html/_main.html
@@ -1,5 +1,6 @@
 <div class="diagonal-box first">
   <div class="container first__container">
+    <div class="first__name">BiaDecor SRL</div>
     <h1 class="first__head heading">
 
       - Жалюзи<br>
