--- a/biadecor/jalousie.html
+++ b/biadecor/jalousie.html
@@ -46,6 +46,7 @@
   <div class="container header__container">
     <a href="index.html" class="header__logo">
       <img class="image" src="images/logo-header.svg" alt="Logo BIADecor" />
+      <span>BiaDecor SRL</span>
     </a>
     <div class="header__menu menu">
       <nav class="menu__body">
