--- a/#src/html/_contacts.html
+++ b/#src/html/_contacts.html
@@ -2,13 +2,24 @@
   <div class="container contacts__container">
     <h2 class="header__ver contacts__head">Контакты</h2>
     <div class="contacts__info">
+
+      <div class="contacts__data">
+        <div class="contacts__name">BiaDecor SRL</div>
+        <div class="contacts__address">Кишинев, Молдова</div>
+      </div>
+
+      <div class="contacts__phones">
+        <a href="tel:+37378882475" class="contacts__phone">Тел: +373 788 82 475</a>
+        <a href="tel:+37369970444" class="contacts__phone">Тел: +373 699 70 444</a>
+      </div>
+
       <div class="contacts__socilas">
         <ul class="contacts__list">
-          <li class="contacts__item">
+          <!-- <li class="contacts__item">
             <a href="tel:+37378882475" class="contacts__link">
               <img class="image" src="@img/icons/sprite.svg#phone2" alt="" />
             </a>
-          </li>
+          </li> -->
           <li class="contacts__item">
             <a href="viber://chat?number=%2B37378882475" class="contacts__link" target="_blank">
               <img class="image" src="@img/icons/sprite.svg#viber" alt="" />
@@ -26,8 +37,7 @@
           </li>
         </ul>
       </div>
-      <a href="tel:+37378882475" class="contacts__phone">Тел: +373 788 82 475</a>
-      <a href="tel:+37369970444" class="contacts__phone">Тел: +373 699 70 444</a>
+
     </div>
   </div>
 </div>
