--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -2,6 +2,7 @@
   <div class="container header__container">
     <a href="index.html" class="header__logo">
       <img class="image" src="@img/logo-header.svg" alt="Logo BIADecor" />
+      <span>BiaDecor SRL</span>
     </a>
     <div class="header__menu menu">
       <nav class="menu__body">
