--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -46,6 +46,7 @@
   <div class="container header__container">
     <a href="index.html" class="header__logo">
       <img class="image" src="images/logo-header.svg" alt="Logo BIADecor" />
+      <span>BiaDecor SRL</span>
     </a>
     <div class="header__menu menu">
       <nav class="menu__body">
@@ -104,6 +105,7 @@
     <main class="main">
       <div class="diagonal-box first">
   <div class="container first__container">
+    <div class="first__name">BiaDecor SRL</div>
     <h1 class="first__head heading">
 
       - Жалюзи<br>
@@ -202,13 +204,24 @@
   <div class="container contacts__container">
     <h2 class="header__ver contacts__head">Контакты</h2>
     <div class="contacts__info">
+
+      <div class="contacts__data">
+        <div class="contacts__name">BiaDecor SRL</div>
+        <div class="contacts__address">Кишинев, Молдова</div>
+      </div>
+
+      <div class="contacts__phones">
+        <a href="tel:+37378882475" class="contacts__phone">Тел: +373 788 82 475</a>
+        <a href="tel:+37369970444" class="contacts__phone">Тел: +373 699 70 444</a>
+      </div>
+
       <div class="contacts__socilas">
         <ul class="contacts__list">
-          <li class="contacts__item">
+          <!-- <li class="contacts__item">
             <a href="tel:+37378882475" class="contacts__link">
               <img class="image" src="images/icons/sprite.svg#phone2" alt="" />
             </a>
-          </li>
+          </li> -->
           <li class="contacts__item">
             <a href="viber://chat?number=%2B37378882475" class="contacts__link" target="_blank">
               <img class="image" src="images/icons/sprite.svg#viber" alt="" />
@@ -226,8 +239,7 @@
           </li>
         </ul>
       </div>
-      <a href="tel:+37378882475" class="contacts__phone">Тел: +373 788 82 475</a>
-      <a href="tel:+37369970444" class="contacts__phone">Тел: +373 699 70 444</a>
+
     </div>
   </div>
 </div>
