add ligthbox gallery

--- a/#src/html/_contacts.html
+++ b/#src/html/_contacts.html
@@ -21,18 +21,28 @@
             </a>
           </li> -->
           <li class="contacts__item">
+            <a href="https://wa.me/37378882475" class="contacts__link" target="_blank">
+              <img class="image" src="@img/icons/sprite.svg#whatsapp" alt="icon whatsapp" />
+            </a>
+          </li>
+          <li class="contacts__item">
+            <a href="https://t.me/%2B37378882475" class="contacts__link" target="_blank">
+              <img class="image" src="@img/icons/sprite.svg#telegram" alt="icon telegram" />
+            </a>
+          </li>
+          <li class="contacts__item">
             <a href="viber://chat?number=%2B37378882475" class="contacts__link" target="_blank">
-              <img class="image" src="@img/icons/sprite.svg#viber" alt="" />
+              <img class="image" src="@img/icons/sprite.svg#viber" alt="icon viber" />
             </a>
           </li>
           <li class="contacts__item">
             <a href="https://facebook.com/biadecor.md/" class="contacts__link" target="_blank">
-              <img class="image" src="@img/icons/sprite.svg#facebook" alt="" />
+              <img class="image" src="@img/icons/sprite.svg#facebook" alt="icon facebook" />
             </a>
           </li>
           <li class="contacts__item">
             <a href="https://instagram.com/biadecor.md/" class="contacts__link" target="_blank">
-              <img class="image" src="@img/icons/sprite.svg#instagram" alt="" />
+              <img class="image" src="@img/icons/sprite.svg#instagram" alt="icon instagram" />
             </a>
           </li>
         </ul>
