--- a/#src/html/_main.html
+++ b/#src/html/_main.html
@@ -1,17 +1,11 @@
 <div class="diagonal-box first">
   <div class="container first__container">
-    <div class="first__name">BiaDecor SRL</div>
     <h1 class="first__head heading">
-
-      - Жалюзи<br>
-      - Роллеты<br>
-      - Москитные сетки
-      <span>
-
-        На заказ
-      </span>
-
+      Жалюзи<br>
+      Роллеты<br>
+      Москитные сетки
+      <span>На заказ</span>
     </h1>
-    <a href="#" class="btn btn-reset first__btn">Акция до 10%</a>
+    <a href="#" class="btn btn-reset first__btn">Скидки до 10%</a>
   </div>
 </div>
