--- a/#src/works.html
+++ b/#src/works.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @include('html/head.html', { "title":"Наши работы" })
-  <body>
-    <div class="wrapper">
-      @include('html/header.html')
-      <main class="main">@include('html/works.html')</main>
-      @include('html/footer.html')
-    </div>
-  </body>
+@include('html/head.html', { "title":"Наши работы" })
+
+<body>
+  <div class="wrapper">
+    @include('html/header.html')
+    <main class="main">@include('html/works.html')</main>
+    @include('html/footer.html')
+  </div>
+
+  <!-- <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script type="module" src="js/main.min.js"></script> -->
+</body>
+
 </html>
