--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#111111" />
-  <!-- <link rel="stylesheet" href="css/adv.css" /> -->
-  <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
-  <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/style.css?ver=1.2.7" />
-  <!-- подключение скриптов -->
-  <script defer src="js/vendor/swiper-bundle.min.js"></script>
-  <script defer src="js/main.min.js"></script>
-  <!-- подключение favicon -->
-  <link
-        rel="apple-touch-icon"
-        sizes="180x180"
-        href="images/favicon/apple-touch-icon.png" />
-  <link
-        rel="icon"
-        type="image/png"
-        sizes="32x32"
-        href="images/favicon/favicon-32x32.png" />
-  <link
-        rel="icon"
-        type="image/png"
-        sizes="16x16"
-        href="images/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="images/favicon/site.webmanifest" />
-  <link
-        rel="mask-icon"
-        href="images/favicon/safari-pinned-tab.svg"
-        color="#5bbad5" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#ffffff" />
-  <!-- title -->
-  <title>Главная - Biadecor жалюзи</title>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="theme-color" content="#111111" />
+      <!-- <link rel="stylesheet" href="css/adv.css" /> -->
+      <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
+      <link rel="stylesheet" href="https://unpkg.com/photoswipe@5.4.2/dist/photoswipe.css" />
+      <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+      <!-- <link rel="stylesheet" href="css/lightbox.css" /> -->
+      <link rel="stylesheet" href="css/style.css?ver=1.2.10" />
+      <!-- подключение скриптов -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <!-- <script defer src="js/lightbox-plus-jquery.js"></script> -->
+      <script type="module" src="js/main.min.js"></script>
+      <!-- подключение favicon -->
+      <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="images/favicon/apple-touch-icon.png" />
+      <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="images/favicon/favicon-32x32.png" />
+      <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="images/favicon/favicon-16x16.png" />
+      <link rel="manifest" href="images/favicon/site.webmanifest" />
+      <link
+            rel="mask-icon"
+            href="images/favicon/safari-pinned-tab.svg"
+            color="#5bbad5" />
+      <meta name="msapplication-TileColor" content="#da532c" />
+      <meta name="theme-color" content="#ffffff" />
+      <!-- title -->
+      <title>Главная - Biadecor жалюзи</title>
 </head>
 
 <body>
@@ -105,19 +108,13 @@
     <main class="main">
       <div class="diagonal-box first">
   <div class="container first__container">
-    <div class="first__name">BiaDecor SRL</div>
     <h1 class="first__head heading">
-
-      - Жалюзи<br>
-      - Роллеты<br>
-      - Москитные сетки
-      <span>
-
-        На заказ
-      </span>
-
+      Жалюзи<br>
+      Роллеты<br>
+      Москитные сетки
+      <span>На заказ</span>
     </h1>
-    <a href="#" class="btn btn-reset first__btn">Акция до 10%</a>
+    <a href="#" class="btn btn-reset first__btn">Скидки до 10%</a>
   </div>
 </div><div class="diagonal-box bg-two features">
   <div class="container features__container">
@@ -223,18 +220,28 @@
             </a>
           </li> -->
           <li class="contacts__item">
+            <a href="https://wa.me/37378882475" class="contacts__link" target="_blank">
+              <img class="image" src="images/icons/sprite.svg#whatsapp" alt="icon whatsapp" />
+            </a>
+          </li>
+          <li class="contacts__item">
+            <a href="https://t.me/%2B37378882475" class="contacts__link" target="_blank">
+              <img class="image" src="images/icons/sprite.svg#telegram" alt="icon telegram" />
+            </a>
+          </li>
+          <li class="contacts__item">
             <a href="viber://chat?number=%2B37378882475" class="contacts__link" target="_blank">
-              <img class="image" src="images/icons/sprite.svg#viber" alt="" />
+              <img class="image" src="images/icons/sprite.svg#viber" alt="icon viber" />
             </a>
           </li>
           <li class="contacts__item">
             <a href="https://facebook.com/biadecor.md/" class="contacts__link" target="_blank">
-              <img class="image" src="images/icons/sprite.svg#facebook" alt="" />
+              <img class="image" src="images/icons/sprite.svg#facebook" alt="icon facebook" />
             </a>
           </li>
           <li class="contacts__item">
             <a href="https://instagram.com/biadecor.md/" class="contacts__link" target="_blank">
-              <img class="image" src="images/icons/sprite.svg#instagram" alt="" />
+              <img class="image" src="images/icons/sprite.svg#instagram" alt="icon instagram" />
             </a>
           </li>
         </ul>
