--- a/biadecor/jalousie.html
+++ b/biadecor/jalousie.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#111111" />
-  <!-- <link rel="stylesheet" href="css/adv.css" /> -->
-  <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
-  <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/style.css?ver=1.2.7" />
-  <!-- подключение скриптов -->
-  <script defer src="js/vendor/swiper-bundle.min.js"></script>
-  <script defer src="js/main.min.js"></script>
-  <!-- подключение favicon -->
-  <link
-        rel="apple-touch-icon"
-        sizes="180x180"
-        href="images/favicon/apple-touch-icon.png" />
-  <link
-        rel="icon"
-        type="image/png"
-        sizes="32x32"
-        href="images/favicon/favicon-32x32.png" />
-  <link
-        rel="icon"
-        type="image/png"
-        sizes="16x16"
-        href="images/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="images/favicon/site.webmanifest" />
-  <link
-        rel="mask-icon"
-        href="images/favicon/safari-pinned-tab.svg"
-        color="#5bbad5" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#ffffff" />
-  <!-- title -->
-  <title>Каталог жалюзей</title>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="theme-color" content="#111111" />
+      <!-- <link rel="stylesheet" href="css/adv.css" /> -->
+      <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
+      <link rel="stylesheet" href="https://unpkg.com/photoswipe@5.4.2/dist/photoswipe.css" />
+      <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+      <!-- <link rel="stylesheet" href="css/lightbox.css" /> -->
+      <link rel="stylesheet" href="css/style.css?ver=1.2.10" />
+      <!-- подключение скриптов -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <!-- <script defer src="js/lightbox-plus-jquery.js"></script> -->
+      <script type="module" src="js/main.min.js"></script>
+      <!-- подключение favicon -->
+      <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="images/favicon/apple-touch-icon.png" />
+      <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="images/favicon/favicon-32x32.png" />
+      <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="images/favicon/favicon-16x16.png" />
+      <link rel="manifest" href="images/favicon/site.webmanifest" />
+      <link
+            rel="mask-icon"
+            href="images/favicon/safari-pinned-tab.svg"
+            color="#5bbad5" />
+      <meta name="msapplication-TileColor" content="#da532c" />
+      <meta name="theme-color" content="#ffffff" />
+      <!-- title -->
+      <title>Каталог жалюзей</title>
 </head>
 
 <body>
