add social in header

--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -35,6 +35,21 @@
         <img class="image" src="@img/icons/sprite.svg#phone" alt="" />
       </a>
       <ul class="social__list">
+        <li class="social__item whatsapp">
+          <a href="https://wa.me/37378882475" class="contacts__link" target="_blank">
+            <img class="image" src="@img/icons/sprite.svg#whatsapp" alt="icon whatsapp" />
+          </a>
+        </li>
+        <li class="social__item telegram">
+          <a href="https://t.me/%2B37378882475" class="contacts__link" target="_blank">
+            <img class="image" src="@img/icons/sprite.svg#telegram" alt="icon telegram" />
+          </a>
+        </li>
+        <li class="social__item viber">
+          <a href="viber://chat?number=%2B37378882475" class="contacts__link" target="_blank">
+            <img class="image" src="@img/icons/sprite.svg#viber" alt="icon viber" />
+          </a>
+        </li>
         <li class="social__item">
           <a href="https://instagram.com/biadecor.md" target="_blank">
             <img class="image" src="@img/icons/sprite.svg#instagram" alt="" />
