--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
       <!-- <link rel="stylesheet" href="css/lightbox.css" /> -->
-      <link rel="stylesheet" href="css/style.css?ver=1.3.1" />
+      <link rel="stylesheet" href="css/style.css?ver=1.3.2" />
       <!-- подключение скриптов -->
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       <!-- <script defer src="js/lightbox-plus-jquery.js"></script> -->
@@ -82,6 +82,21 @@
         <img class="image" src="images/icons/sprite.svg#phone" alt="" />
       </a>
       <ul class="social__list">
+        <li class="social__item whatsapp">
+          <a href="https://wa.me/37378882475" class="contacts__link" target="_blank">
+            <img class="image" src="images/icons/sprite.svg#whatsapp" alt="icon whatsapp" />
+          </a>
+        </li>
+        <li class="social__item telegram">
+          <a href="https://t.me/%2B37378882475" class="contacts__link" target="_blank">
+            <img class="image" src="images/icons/sprite.svg#telegram" alt="icon telegram" />
+          </a>
+        </li>
+        <li class="social__item viber">
+          <a href="viber://chat?number=%2B37378882475" class="contacts__link" target="_blank">
+            <img class="image" src="images/icons/sprite.svg#viber" alt="icon viber" />
+          </a>
+        </li>
         <li class="social__item">
           <a href="https://instagram.com/biadecor.md" target="_blank">
             <img class="image" src="images/icons/sprite.svg#instagram" alt="" />
