--- a/#src/index.html
+++ b/#src/index.html
@@ -11,6 +11,27 @@
       @include('html/_about.html') @include('html/_contacts.html')
     </main>
     @include('html/footer.html')
+
+
+    <!-- КОД ДЛЯ ПЛАВАЮЩЕЙ КНОПКИ -->
+
+    <div class="call-btn">
+      <a href="tel:+37360123456" class="call-link call-btn--viber">
+        <img src="@img/icons/sprite.svg#viber" loading="lazy" width="" height="" alt="">
+        Viber
+      </a>
+      <a href="tel:+37360123456" class="call-link call-btn--phone">
+        <img src="@img/icons/sprite.svg#phone" loading="lazy" width="" height="" alt="">
+      </a>
+      <a href="tel:+37360123456" class="call-link call-btn--whatsapp">
+        <img src="@img/icons/sprite.svg#whatsapp" loading="lazy" width="" height="" alt="">
+        Whatsaspp
+      </a>
+    </div>
+
+    <!-- КОД ДЛЯ ПЛАВАЮЩЕЙ КНОПКИ -->
+
+
   </div>
 </body>
 
