--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -267,8 +267,29 @@
 </div>
     </main>
     <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+  </div>
 </footer>
+
+
+    <!-- КОД ДЛЯ ПЛАВАЮЩЕЙ КНОПКИ -->
+
+    <div class="call-btn">
+      <a href="tel:+37360123456" class="call-link call-btn--viber">
+        <img src="images/icons/sprite.svg#viber" loading="lazy" width="" height="" alt="">
+        Viber
+      </a>
+      <a href="tel:+37360123456" class="call-link call-btn--phone">
+        <img src="images/icons/sprite.svg#phone" loading="lazy" width="" height="" alt="">
+      </a>
+      <a href="tel:+37360123456" class="call-link call-btn--whatsapp">
+        <img src="images/icons/sprite.svg#whatsapp" loading="lazy" width="" height="" alt="">
+        Whatsaspp
+      </a>
+    </div>
+
+    <!-- КОД ДЛЯ ПЛАВАЮЩЕЙ КНОПКИ -->
+
 
   </div>
 </body>
