--- a/biadecor/jalousie.html
+++ b/biadecor/jalousie.html
@@ -409,9 +409,9 @@
   </div>
 </div></main>
     <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+  </div>
 </footer>
-
   </div>
 </body>
 
