--- a/biadecor/works.html
+++ b/biadecor/works.html
@@ -890,9 +890,9 @@
   </div>
 </div></main>
     <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+  </div>
 </footer>
-
   </div>
 
   <!-- <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
